work on brw detail

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,21 +1,16 @@
 <div class="card">
-  <div class="card-header">
-    <h5 class="card-title">{{feature.properties.bodenrichtwertzonename}}</h5>
-    <h6 class="card-subtitle">{{feature.properties.name}}</h6>
-  </div>
-<!--  <ul *ngFor="let item of feature.properties | keyvalue">-->
-<!--    <li *ngIf="item.value">{{item.key}} : {{item.value}}</li>-->
-<!--  </ul>-->
+  <h5 class="card-header">
+    {{feature.properties.brzname}}
+    {{feature.properties.wnum}}
+  </h5>
   <div class="card-body">
     <dl class="row">
       <dd class="col-md-6">Art der Nutzung</dd>
-      <dt class="col-md-6">{{feature.properties.art}}</dt>
+      <dt class="col-md-6">{{feature.properties.nutzung}}</dt>
       <dd class="col-md-6">Bodenrichtwert</dd>
-      <dt class="col-md-6">{{feature.properties.ergaenzung}}</dt>
-      <dd class="col-md-6">Bodenrichtwert</dd>
-      <dt class="col-md-6">{{feature.properties.bodenrichtwert}}</dt>
+      <dt class="col-md-6">{{feature.properties.brw}}</dt>
       <dd class="col-md-6">Beitragsabgabenrechtlicher Zustand</dd>
-      <dt class="col-md-6">{{feature.properties.beitragsabgabenrechtlicherzustand}}</dt>
+      <dt class="col-md-6">{{feature.properties.beit}}</dt>
     </dl>
   </div>
 </div>
