--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -1,9 +1,11 @@
 <div class="col-md-12">
+
+
   <h3>Zeitliche Entwicklung</h3>
   <p>Die zeitliche Entwicklungsreihe berücksichtigt nur die Bodenrichtwerte, die zum Stichtag 31.12.2019 für jeweils ein
     Jahr ermittelt werden. Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
 
-  <div echarts (chartInit)="echartsIntance = $event" [options]="chartOption" class="demo-chart"></div>
+  <div echarts (chartInit)="onChartInit($event)" [options]="chartOption" class="demo-chart"></div>
 
   <div>
     <p *ngIf="chartOption?.series.length >= 2">Für die ausgewählte Koordinate liegen seit dem Jahr 2012 mehrere
