--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -18,8 +18,8 @@
   </div>
   <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
     <div class="my-3 p-3">
-      <h2 class="font-weight-normal">Immobilienpreis-Kalkulator</h2>
-      <a class="btn btn-danger" routerLink="">Bald verfügbar</a>
+      <h2 class="font-weight-normal">Fragebogen</h2>
+      <a class="btn btn-danger" [routerLink]="['/forms']">Zur Anwendung</a>
     </div>
     <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
   </div>
