--- a/power/src/app/immobilien/immobilien/immobilien.component.scss
+++ b/power/src/app/immobilien/immobilien/immobilien.component.scss
@@ -8,7 +8,7 @@
 
 .chart-graph {
 	height: 470px;
-	margin-top: -175px;
+	margin-top: -80px;
 }
 
 .chart-map {
@@ -26,6 +26,7 @@ ul {
 
 /deep/ .btn-link {
 	color: #343a40 !important;
+	text-align: left;
 }
 
 .check {
