work on nutzung pipe

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -6,7 +6,7 @@
   <div class="card-body">
     <dl class="row">
       <dd class="col-md-6">Art der Nutzung</dd>
-      <dt class="col-md-6">{{feature.properties.nutzung}}</dt>
+      <dt class="col-md-6">{{ feature.properties.nutzung | nutzung}}</dt>
       <dd class="col-md-6">Bodenrichtwert</dd>
       <dt class="col-md-6">{{feature.properties.brw}}</dt>
       <dd class="col-md-6">Beitragsabgabenrechtlicher Zustand</dd>
