--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -11,7 +11,7 @@
       <dt class="col-md-6">{{feature.properties.brw}} &euro; / m&#178;</dt>
       <dd class="col-md-6">Beitragsabgabenrechtlicher Zustand</dd>
       <dt class="col-md-6">{{feature.properties.beit | beitrag }}</dt>
-      <dd class="col-md-6">Umrechnungsfaktoren</dd>
+<!--      <dd class="col-md-6">Umrechnungsfaktoren</dd>-->
 <!--      <dt class="col-md-6">{{feature.properties.umrechnungstabellendatei | json}} <br>-->
 <!--        {{feature.properties.umrechnungstabellenwerte | json}}</dt>-->
     </dl>
