--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -109,7 +109,7 @@
 
     <mgl-vector-source
       id="geoserver"
-      [tiles]="[baseUrl+'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=boris:br_brzone_flat_min&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']"
+      [tiles]="[baseUrl+'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=boris:br_brzone_flat&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']"
     >
     </mgl-vector-source>
 
@@ -119,7 +119,7 @@
       type="line"
       [source]="'geoserver'"
       [minzoom]="11"
-      [sourceLayer]="'br_brzone_flat_min'"
+      [sourceLayer]="'br_brzone_flat'"
       [paint]="{
       'line-color': '#c4153a',
       'line-width': {
@@ -137,7 +137,7 @@
       id="landwirtschaft"
       type="line"
       [source]="'geoserver'"
-      [sourceLayer]="'br_brzone_flat_min'"
+      [sourceLayer]="'br_brzone_flat'"
       [minzoom]="10"
       [paint]="{
       'line-color': '#009900',
@@ -152,10 +152,10 @@
     ></mgl-layer>
 
     <mgl-layer
-      id="appto"
+      id="appto_bauland"
       type="symbol"
       [source]="'geoserver'"
-      [sourceLayer]="'br_brzone_flat_min'"
+      [sourceLayer]="'br_brzone_flat'"
       [minzoom]=13
       [paint]="{
       'text-halo-color' : '#fff',
@@ -165,10 +165,35 @@
      }"
       [layout]="{
       'text-field': ['number-format',['to-number', ['get','brw']], { 'locale':'de', 'max-fraction-digits': 0}],
-      'text-size': 12,
+      'text-size': {
+        'stops': [[12,10],[15,16]]
+        },
       'text-font': ['Klokantech Noto Sans Regular']
     }"
-      [filter]="['all',['==','stag',stichtag]]"
+      [filter]="['all',['==','stag',stichtag],['in','entw','B','SF'],['==','entw', teilmarkt.value]]"
+    >
+    </mgl-layer>
+
+    <mgl-layer
+      id="appto_landwirtschaft"
+      type="symbol"
+      [source]="'geoserver'"
+      [sourceLayer]="'br_brzone_flat'"
+      [minzoom]=10
+      [paint]="{
+      'text-halo-color' : '#fff',
+      'text-halo-width' : 2,
+      'text-halo-blur' : 2,
+      'text-color' : 'rgb(117, 129, 145)'
+     }"
+      [layout]="{
+      'text-field': '{brw}',
+      'text-size': {
+        'stops': [[10,20],[15,24]]
+        },
+      'text-font': ['Klokantech Noto Sans Regular']
+    }"
+      [filter]="['all',['==','stag',stichtag],['==','entw','L'],['==','entw', teilmarkt.value]]"
     >
     </mgl-layer>
 
