--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -48,7 +48,7 @@
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
                                 <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: .5rem;" (click)="toggleNipixCategory(itm)" *ngIf="getDraw(itm).show">
                                     <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigenheime'"></i>
-                                    <i class="fa fa-hospital-o" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigentumswohnungen'"></i>
+                                    <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigentumswohnungen'"></i>
                                 </span>
                             </ng-container>
                             <span *ngFor="let f of nicat">
@@ -97,7 +97,7 @@
                                 <span style="display:inline-block;margin-right:5px;border-radius:10px;width:10px;height:10px;" [style.background-color]="getDraw(itm).colors"></span>
                                 {{ itm }}
                                 <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigenheime'"></i>
-                                <i class="fa fa-hospital-o" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigentumswohnungen'"></i>
+                                <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigentumswohnungen'"></i>
                                 ({{ shortNames[itm] }})</span>
                         </li>
                     </ul>
