--- a/power/src/app/immobilien/immobilien/immobilien.component.scss
+++ b/power/src/app/immobilien/immobilien/immobilien.component.scss
@@ -45,17 +45,18 @@ ul {
 }
 input[type=checkbox] { display:none; } /* to hide the checkbox itself */
 input[type=checkbox] + label:before {
-  font-family: FontAwesome;
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 400;
   display: inline-block;
 }
 
 input[type=checkbox] + label:before { 
-  content: "\f096"; /* unchecked icon */
+  content: "\f0c8"; /* unchecked icon */
   letter-spacing: 10px; /* space between checkbox and label */
 }
 
 input[type=checkbox]:checked + label:before {
-  content: "\f046"; /* checked icon */
+  content: "\f14a"; /* checked icon */
   letter-spacing: 6.5px; /* allow space for check mark */
 }
 
