--- a/power/src/app/fragebogen/editor/preview/preview.component.css
+++ b/power/src/app/fragebogen/editor/preview/preview.component.css
@@ -1,9 +1,9 @@
 .fullscreen {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  z-index: 9999;
 }
