--- a/power/src/app/shared/loadingscreen/loadingscreen.component.css
+++ b/power/src/app/shared/loadingscreen/loadingscreen.component.css
@@ -1,10 +1,10 @@
 #loadingscreen {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    z-index: 999;
-    background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  z-index: 999;
+  background-color: white;
 }
