--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -2,11 +2,10 @@
     <div class="col-sm-8">
         <div echarts [options]="options" [loading]="!mapLoaded" (chartInit)="onChartInit($event)" (chartMapSelectChanged)="onMapSelectChange($event)" class="demo-chart chart-map"></div>
         <div echarts [options]="chartOption" (chartInit)="onChartChartInit($event)" (chartDataZoom)="onDataZoom($event)" (chartClick)="chartClicked($event)" (chartFinished)="onChartFinished($event)" class="demo-chart chart-graph"></div>
-        <div style="text-align:center;" [ngStyle]="{'font-size': fontSizePage+'rem'}">HINWEIS: Das Basisjahr der Indexreihenberechung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen. </div>
+        <div style="text-align: center;" [ngStyle]="{'font-size': fontSizePage+'rem'}">HINWEIS: Das Basisjahr der Indexreihenberechung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen. </div>
     </div>
     <div class="col-sm-4">
         <ngb-accordion [closeOthers]="true" activeIds="static-0" (panelChange)="onPanelChange($event)" #acc="ngbAccordion">
-
 
             <ngb-panel *ngFor="let select of selection; let p = index" id="static-{{p}}">
                 <ng-template ngbPanelTitle>
@@ -46,7 +45,7 @@
 
                         <li *ngIf="select['type'] == 'multiSelect'">
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
-                                <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: .5rem;" (click)="toggleNipixCategory(itm)" *ngIf="getDraw(itm).show">
+                                <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;" (click)="toggleNipixCategory(itm)" *ngIf="getDraw(itm).show">
                                     <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigenheime'"></i>
                                     <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="getDraw(itm)['nipixCategory'] == 'gebrauchte Eigentumswohnungen'"></i>
                                 </span>
@@ -56,13 +55,12 @@
                             </span>
                         </li>
 
-
                         <li>
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
                                 <ng-container *ngIf="getDraw(itm).show">
-                                    <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: .5rem;">
+                                    <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;">
                                         <input id="{{i}}vall" [checked]="getDraw(itm).values.length == 0" type="checkbox" (click)="toggleAllSelect(itm)">
-                                        <label for="{{i}}vall" style="margin-bottom: 0px;">
+                                        <label for="{{i}}vall" style="margin-bottom: 0;">
                                         </label>
                                     </span>
                                     <span *ngIf="select['type'] == 'single' && getDraw(itm).values.length == 0">alle auswählen</span>
@@ -80,10 +78,10 @@
 
                                 <span class="check" [style.background-color]="getCustomColor(itm)" *ngIf="getDraw(itm).show">
                                     <input id="{{i}}v1{{subitem}}" [checked]="getDraw(itm).values.includes(subitem)" type="checkbox" (click)="toggleMapSelect(itm, subitem, select['type'])">
-                                    <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0px;"></label>
+                                    <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0;"></label>
                                 </span>
                             </ng-container>
-                            <span style="display:inline-block;margin-right:5px;border-radius:10px;width:10px;height:10px;" [style.background-color]="getSeriesColor(subitem)" *ngIf="select['type'] == 'single'"></span>
+                            <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="getSeriesColor(subitem)" *ngIf="select['type'] == 'single'"></span>
                             {{ getSeriesLabel(subitem) }}
                         </li>
                     </ul>
@@ -94,7 +92,7 @@
                             <input id="{{itm}}" type="checkbox" [checked]="getDraw(itm).show" (change)="onToggleDrawRoot(itm)">
                             <label for="{{itm}}"></label>
                             <span (click)="onClickDrawRoot(itm)">
-                                <span style="display:inline-block;margin-right:5px;border-radius:10px;width:10px;height:10px;" [style.background-color]="getDraw(itm).colors"></span>
+                                <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="getDraw(itm).colors"></span>
                                 {{ itm }}
                                 <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigenheime'"></i>
                                 <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true" *ngIf="itm == 'Eigentumswohnungen'"></i>
@@ -102,10 +100,8 @@
                         </li>
                     </ul>
 
-
                 </ng-template>
             </ngb-panel>
-
 
             <!-- Find Woma-Region -->
             <ngb-panel id="static-99">
