--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
@@ -28,7 +28,6 @@ mgl-map {
   width: 100%;
   z-index: 1000;
   height: 2.75rem;
-  //overflow-y: hidden;
 }
 
 .nav-scroller .nav {
@@ -38,17 +37,16 @@ mgl-map {
   flex-wrap: nowrap;
   padding-bottom: 1rem;
   margin-top: -1px;
-  // overflow-x: auto;
-  color: rgba(255, 255, 255, .75);
+  color: rgba(255, 255, 255, 0.75);
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
 }
 
 .nav-underline .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 0.875rem;
   color: #6c757d;
 }
 
@@ -62,7 +60,7 @@ mgl-map {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .bg-purple {
