--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -11,7 +11,6 @@
 		</div>
 		<div class="col-12 col-md-6 pl-0">
 			Erstellt: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
-			<br>Aktualisiert: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
 		</div>
 		<div class="col-12 pl-0 pt-2">
 			<button type="button" class="btn btn-primary btn-sm mr-2" title="Formular bearbeiten"
@@ -19,13 +18,21 @@
               <i class="fa fa-edit fa-fw" aria-hidden="true"></i>
               Bearbeiten
 			</button>
-            <button type="button" class="btn btn-danger btn-sm" title="Formular löschen"
+<!--      TODO: Menu für die Auswahl des Access-Mode (Public, Pin6, Pin6Factor, Pin8...)-->
+      <button type="button" class="btn btn-primary btn-sm mr-2" title="Formular veröffentlichen"
+              (click)="publishFormPin6()">
+        <i class="fa fa-arrow-up fa-fw" aria-hidden="true"></i>
+              Veröffentlichen (Pin6)
+      </button>
+      <button type="button" class="btn btn-danger btn-sm" title="Formular löschen"
 					(click)="deleteForm()">
               <i class="fa fa-trash fa-fw" aria-hidden="true"></i>
               Löschen
-            </button>
+      </button>
 		</div>
 	</div>
+
+  <!--      TODO: Hide List if form is not published yet and has a Public-Access-Mode-->
 
 	<!-- tasks list -->
 	<div class="card bg-light">
@@ -37,21 +44,23 @@
 			<table class="table table-hover m-0">
 				<thead>
 					<tr>
+            <th scope="col" class="border-top-0">ID</th>
 						<th scope="col" class="border-top-0">PIN</th>
 						<th scope="col" class="border-top-0">Abgeschlossen</th>
+            <th scope="col" class="border-top-0">In Bearbeitung</th>
 						<th scope="col" class="border-top-0">Erstellt</th>
-						<th scope="col" class="border-top-0">Aktualisiert</th>
 						<th scope="col" class="border-top-0 w-50"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr *ngFor="let task of storage.tasksList; index as i">
+            <td>{{ task.id }}</td>
 						<td scope="row">
 							<a [routerLink]="['/forms/fillout', task.pin]">{{ task.pin }}</a>
 						</td>
-						<td></td>
+						<td>{{ task.submitted | date:'dd.MM.yyyy HH:mm' }}</td>
+            <td>{{ task.accessed | date:'dd.MM.yyyy HH:mm' }}</td>
 						<td>{{ task.created | date:'dd.MM.yyyy HH:mm' }}</td>
-						<td>{{ task.updated | date:'dd.MM.yyyy HH:mm' }}</td>
 						<td>
 							<button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Antwort löschen"
 									(click)="deleteTask(i)">
