--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -55,7 +55,7 @@
 
   <power-geosearch [class.d-none]="!searchActive" (selectResult)="flyTo($event)"></power-geosearch>
 
-  <div class="height-minus-header-map" #map [class.small]="features">
+  <div class="height-minus-header-map" [class.small]="flurstueckSelection.size > 0" #map>
     <a class="anchor"></a>
 
     <mgl-map
