Fixed linter warnings

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert-component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert-component.html
@@ -3,8 +3,8 @@
     <a class="anchor"></a>
     <power-bodenrichtwertkarte [(stichtag)]="stichtag" [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
   </div>
-  <ngb-accordion #acc="ngbAccordion" style="background-color: white !important; border-bottom: 0px; !important;">
-    <ngb-panel style="border: 0px !important;">
+  <ngb-accordion #acc="ngbAccordion" style="background-color: white !important; border-bottom: 0 !important;">
+    <ngb-panel style="border: 0 !important;">
       <ng-template ngbPanelHeader>
         <div>
           <div *ngIf="!adresse" class="text-center">
