--- a/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.html
@@ -19,7 +19,7 @@
     <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
     </ngb-pagination>
 
-    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize">
+    <select class="custom-select" style="width: auto;" [(ngModel)]="pageSize">
       <option [ngValue]="2">2 items per page</option>
       <option [ngValue]="4">4 items per page</option>
       <option [ngValue]="8">8 items per page</option>
