--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -9,13 +9,8 @@
       <dt class="col-md-6">{{feature.properties.nutzung | nutzung}}</dt>
       <dd class="col-md-6">Bodenrichtwert</dd>
       <dt class="col-md-6">{{feature.properties.brw}} &euro; / m&#178;</dt>
-      <span *ngIf="feature.properties.beit">
-        <dd class="col-md-6">Beitragsabgabenrechtlicher Zustand</dd>
-        <dt class="col-md-6">{{feature.properties.beit | beitrag }}</dt>
-      </span>
-<!--      <dd class="col-md-6">Umrechnungsfaktoren</dd>-->
-<!--      <dt class="col-md-6">{{feature.properties.umrechnungstabellendatei | json}} <br>-->
-<!--        {{feature.properties.umrechnungstabellenwerte | json}}</dt>-->
+      <dd class="col-md-6" *ngIf="feature.properties.beit">Beitragsabgabenrechtlicher Zustand</dd>
+      <dt class="col-md-6" *ngIf="feature.properties.beit">{{feature.properties.beit | beitrag }}</dt>
     </dl>
   </div>
 </div>
