Refactored home component

--- a/power/src/app/shared/loadingscreen/loadingscreen.component.html
+++ b/power/src/app/shared/loadingscreen/loadingscreen.component.html
@@ -2,9 +2,7 @@
     <div class="row h-100 m-0">
         <div class="col-sm-12 my-auto text-center">
             <div class="h1">
-                <div class="spinner-border m-2" role="status">
-                    <span class="sr-only">Wird geladen...</span>
-                </div>
+                <div class="spinner-border m-2" role="status" aria-hidden="true"></div>
                 <span class="font-weight-light">Wird geladen...</span>
             </div>
         </div>
