--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -16,12 +16,12 @@
         <div class="lead">
           <form #pinFormular="ngForm" (ngSubmit)="submitPIN(pin.value)" class="form-inline">
             <label class="control-label sr-only" for="pin">Formular PIN</label>
-            <input type="text" class="form-control mr-2 w-50" id="pin" placeholder="Formular PIN" #pin>
+            <input type="text" class="form-control mr-2 w-75" id="pin" placeholder="Formular PIN" #pin>
             <button type="submit" class="btn btn-success" title="Absenden">
               <svg width="1em" height="1em" viewBox="4 2 8 10.5" class="bi bi-play-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
               </svg>
-              <span class="sr-only sr-only-focusable">Absenden</span>
+              <span class="sr-only">Absenden</span>
             </button>
           </form>
         </div>
@@ -73,7 +73,7 @@
         <hr class="my-4">
         <div class="lead">
           <a [routerLink]="['/forms/dashboard']">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path fill-rule="evenodd" d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
               <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
               <path fill-rule="evenodd" d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
