--- a/power/src/app/shared/loadingscreen/loadingscreen.component.html
+++ b/power/src/app/shared/loadingscreen/loadingscreen.component.html
@@ -1,4 +1,4 @@
-<div id="loadingscreen" *ngIf="loadingscreen.isVisible">
+<div id="loadingscreen" *ngIf="loadingscreen.visible">
     <div class="row h-100 m-0">
         <div class="col-sm-12 my-auto text-center">
             <div class="h1">
