Moved component and pipe into surveyjs module

--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -186,4 +186,4 @@
 </main>
 
 <!-- preview -->
-<power-formulars-editor-preview #preview></power-formulars-editor-preview>
+<power-formulars-surveyjs-preview [form]="storage.model" #preview></power-formulars-surveyjs-preview>
