Removed fontawesome from surveyjs module

--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -18,7 +18,7 @@
             <label class="control-label sr-only" for="pin">Formular PIN</label>
             <input type="text" class="form-control mr-2 w-75" id="pin" placeholder="Formular PIN" #pin>
             <button type="submit" class="btn btn-success" title="Absenden">
-              <svg width="1em" height="1em" viewBox="4 2 8 10.5" class="bi bi-play-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-play-fill align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
               </svg>
               <span class="sr-only">Absenden</span>
