--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -1,5 +1,5 @@
 <div class="fullscreen bg-white" *ngIf="isOpen">
-    <div class="container p-3">
+    <div class="container p-1 p-lg-3">
         <button type="button" class="btn btn-secondary mb-3" title="Formular Vorschau schließen" (click)="Toggle()">
             <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-arrows-collapse align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8zm6-7a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1z"/>
