--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -118,25 +118,36 @@
                     <tr>
                         <th scope="col" class="border-top-0">ID</th>
                         <th scope="col" class="border-top-0">PIN</th>
-                        <th scope="col" class="border-top-0">Abgeschlossen</th>
-                        <th scope="col" class="border-top-0">In Bearbeitung</th>
+                        <th scope="col" class="border-top-0">Status</th>
+                        <th scope="col" class="border-top-0">Zuletzt bearbeitet</th>
                         <th scope="col" class="border-top-0">Erstellt</th>
-                        <th scope="col" class="border-top-0 w-50"></th>
+                        <th scope="col" class="border-top-0 w-75"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let task of storage.tasksList; index as i">
                         <td>{{ task.id }}</td>
                         <td>
-                            <a [routerLink]="['/forms/fillout', task.pin]">{{ task.pin }}</a>
+                            <a [routerLink]="['/forms/fillout', task.pin]"
+                               *ngIf="task.status !== 'submitted'">
+                               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
+                                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
+                                    <path fill-rule="evenodd" d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
+                                </svg>
+                                {{ task.pin }}
+                            </a>
                         </td>
-                        <td>{{ task.submitted | date:'dd.MM.yyyy HH:mm' }}</td>
-                        <td>{{ task.accessed | date:'dd.MM.yyyy HH:mm' }}</td>
+                        <td>{{ task.status }}</td>
+                        <td *ngIf="task.status !== 'submitted'">{{ task.accessed | date:'dd.MM.yyyy HH:mm' }}</td>
+                        <td *ngIf="task.status === 'submitted'">{{ task.submitted | date:'dd.MM.yyyy HH:mm' }}</td>
                         <td>{{ task.created | date:'dd.MM.yyyy HH:mm' }}</td>
                         <td>
                             <button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Antwort löschen"
                                     (click)="deleteTask(i)">
-                            <i class="fa fa-trash fa-fw" aria-hidden="true"></i>
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+                            </svg>
                             Löschen
                             </button>
                         </td>
